--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(CUDALAB_Simple helper.c simple.cu)
 add_executable(CUDALAB_MatrixPow helper.c Matrix_pow.cu)
 add_executable(CUDALAB_MatrixMult helper.c Matrix_mult.cu)
 
-set_property(TARGET CUDALAB_Simple PROPERTY CUDA_STANDARD 11)
-set_property(TARGET CUDALAB_MatrixPow PROPERTY CUDA_STANDARD 11)
-set_property(TARGET CUDALAB_MatrixMult PROPERTY CUDA_STANDARD 11)
+set_property(TARGET CUDALAB_Simple PROPERTY CUDA_STANDARD 17 CXX_STANDARD 17)
+set_property(TARGET CUDALAB_MatrixPow PROPERTY CUDA_STANDARD 17 CXX_STANDARD 17)
+set_property(TARGET CUDALAB_MatrixMult PROPERTY CUDA_STANDARD 17 CXX_STANDARD 17)
 
